--- a/webstyle.css
+++ b/webstyle.css
@@ -5,10 +5,18 @@ body{
     display: flex;
     background-color:deepskyblue;
     height: 10vh;
+    outline-offset: 50px;
     justify-content: center;
-    padding: 20px;
+    padding: 30px;
+    font-size:larger;
+    margin-top: 30px;
+    margin-left: 25px;
+    margin-right: 25px;
+    border-style: dashed;
+    text-decoration-line: underline;
+    text-decoration-style:double;
 }
-.h2{
-    font-size: 100;
-    font-style: Arial bold;
+.container2{
+    display: flex;
+    justify-content: center;
 }
